# nf-scil

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .nf-core.yml  .prettierignore  .test_data.dvc  CONTRIBUTING.md  README.md  nf-test.config  package-lock.json  pyproject.toml  requirements.txt  run_tests.sh  sync-nf-core.sh
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.sh  setup_container.sh  updateContentCommand.sh
.dvc/: config
.github/: pull_request_template.md  reviewers.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  usage-issue.md
.github/PULL_REQUEST_TEMPLATE/: new_module.md
.github/workflows/: checks.yml  code_linting.yml  lint_module.yml  nf-test_module.yml  test.yml  test_module.yml  update_main.yml  update_pr.yml
.test_data/betcrop/: fslbetcrop_bval.bval  fslbetcrop_bvec.bvec
.test_data/fslbetcrop/: fslbetcrop_bvec.bvec
.test_data/heavy/dwi/: dwi.bval
.test_data/heavy/freesurfer/: license.txt
.test_data/light/priors/: s1__iso_diff.txt  s1__para_diff.txt  s2__iso_diff.txt  s2__para_diff.txt
.test_data/preproc/: dwi_normalize_bval.bval  dwi_normalize_bvec.bvec
.test_data/preproc/normalize/: dwi_normalize_bval.bval  dwi_normalize_bvec.bvec
docs/: MODULE.md  SCILPY_DATA.md  SUBWORKFLOWS.md  TEST_DATA.md  VALIDATION.md  data.md  generate_scil_data_md.py  generate_test_data_markdown.py  pull_request_template.md
modules/: environment-schema.json
modules/nf-scil/betcrop/antsbet/: environment.yml  main.nf  meta.yml
modules/nf-scil/betcrop/blabla/: main.nf  meta.yml
modules/nf-scil/betcrop/cropvolume/: environment.yml  main.nf  meta.yml
modules/nf-scil/betcrop/fslbetcrop/: environment.yml  main.nf  meta.yml
modules/nf-scil/betcrop/synthbet/: environment.yml  main.nf  meta.yml
nf-scil-extensions/: CHANGELOG.md  README.md  icon.avif  nf-scil-extensions-0.0.1.vsix  package.json
subworkflows/nf-scil/anatomical_segmentation/: main.nf  meta.yml
subworkflows/nf-scil/load_test_data/: main.nf  meta.yml
subworkflows/nf-scil/preproc_dwi/: main.nf  meta.yml
subworkflows/nf-scil/preproc_t1/: main.nf  meta.yml
subworkflows/nf-scil/rbx/: main.nf  meta.yml
subworkflows/nf-scil/registration/: main.nf  meta.yml
subworkflows/nf-scil/topup_eddy/: main.nf  meta.yml
subworkflows/nf-scil/tractoflow/: main.nf  meta.yml
tests/: run_tests.sh
tests/config/: nextflow.config  nf-test.config  pytest_modules.yml  test_data.config
(+508 files in other folders)
