[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]

name = "nf-scil-tools"
version = "0.1.0"
description = "Tools for the NF-SCIL project"
license = "MIT"
readme = "README.md"

authors = ["The SCIL developers"]

maintainers = [
    "alex valcourt caron <alex.valcourt.caron@usherbrooke.ca>",
    "arnaud boré <arnaud.bore@gmail.com>"
]

homepage = "https://scil.usherbrooke.ca/"

repository = "https://github.com/scilus/nf-scil.git"

[tool.poetry.dependencies]

python = "<3.13,>=3.8"
nf-core = "^2.0.0"
nibabel = "^5.1.0"
numpy = "^1.24"
requests = "^2.28"
sphinx = "<=7.1.0"
black = "^23.11.0"
isort = "^5.12.0"
myst-parser = "^2.0.0"
pytest-cov = "^4.1.0"
pytest-datafiles = "^3.0.0"
responses = "^0.24.1"
sphinx-rtd-theme = "^2.0.0"
dvc = "^3.28.0"
dvc-gdrive = "^2.20.0"
